<resources>
    <string name="app_name">PackItUpAndroid</string>

    <string name="add">add</string>
    <string name="already_registered">already registered?</string>
    <string name="app_copyright">%d @CheoR</string>
    <string name="app_slogan">track what you pack, where you packed it, and its value</string>
    <string name="app_title">track what you pack, app</string>
    <string name="back_button">back</string>
    <string name="box">Box</string>
    <string name="box_items">%s\'s items</string>
    <string name="boxes">boxes</string>
    <string name="button_cancel">cancel</string>
    <string name="button_confirm">confirm</string>
    <string name="camera">camera</string>
    <string name="camera_preview">Camera preview showing live feed</string>
    <string name="card_description">%s</string>
    <string name="card_dropdown_title">%s</string>
    <string name="card_title">%s</string>
    <string name="collction">Collection</string>
    <string name="collection_boxes">%s\'s boxes</string>
    <string name="collections">collections</string>
    <string name="confirm_delete">are you sure you want to delete %s?</string>
    <string name="delete">delete</string>
    <string name="dropdown_menu_item_add">add</string>
    <string name="dropdown_menu_item_camera">camera</string>
    <string name="dropdown_menu_item_delete">delete</string>
    <string name="dropdown_menu_item_edit">edit</string>
    <string name="dropdown_menu_item_share">share</string>
    <string name="edit">edit</string>
    <string name="edit_collection_box_item">edit %s</string>
    <string name="email">email</string>
    <string name="first_name">first name</string>
    <string name="fragile">fragile</string>
    <string name="home">home</string>
    <string name="items">items</string>
    <string name="last_name">last name</string>
    <string name="login">login</string>
    <string name="minus">-</string>
    <string name="more">more</string>
    <string name="navigation_bottom">navigation bottom</string>
    <string name="no_account">no account?</string>
    <string name="password">password</string>
    <string name="password_confirm">confirm password</string>
    <string name="plus">+</string>
    <string name="register">register</string>
    <string name="search">search</string>
    <string name="snackbar_message_create">Create %s first</string>
    <string name="summary">summary</string>
    <string name="total_value">total value</string>
    <string name="username">username</string>
    <string name="value">$ %f</string>
    <string name="decrement">decrement</string>
    <string name="counter_value">counter value %d</string>
    <string name="increment">increment</string>
    <string name="empty_list">list is empty</string>
    <string name="no_element_found">no %s found</string>
    <string name="settings">settings</string>
    <string name="set_setting">%s setting</string>
    <string name="dark_theme">dark theme</string>
    <string name="badgeContentDescription">Number of %s %d</string>
    <string name="fragile_checkbox">fragile checkbox</string>
    <string name="icon_navigateTo_button">navigate to"</string>
    <string name="edit_dialog_title">edit %s</string>
    <string name="delete_dialog_title">delete %s</string>
    <string name="camera_dialog_title">capture %s</string>
    <string name="favorite">favorite</string>
    <string name="base_card">base card</string>
    <string name="edit_card">edit card</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="dropdown_select_box">dropdown select box</string>
    <string name="default_item_badge">default item badge</string>
    <string name="default_box_badge">default box badge</string>
    <string name="open_menu">swipe left to open menu</string>
    <string name="badge_count">badge count %d elements</string>
    <string name="image_description">image of %s</string>
    <string name="dropdown_option_selected">%s selected</string>
    <string name="dropdown_no_option_unselected">no option selected</string>
    <string name="loading">loading . . .</string>
    <string name="spinner_content_description">loading content</string>"
    <string name="delivery_option_shipping">shipping</string>
    <string name="delivery_option_summarize">summarize</string>
    <string name="delivery_option_backup">backup</string>
</resources>